fix song select overflow problem

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -863,6 +863,9 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-nowrap {
+    text-wrap: nowrap;
+  }
   .text-wrap {
     text-wrap: wrap;
   }
@@ -1280,6 +1283,11 @@
       width: 100%;
     }
   }
+  .md\:w-max {
+    @media (width >= 48rem) {
+      width: max-content;
+    }
+  }
   .md\:grow {
     @media (width >= 48rem) {
       flex-grow: 1;
@@ -1369,6 +1377,11 @@
   .lg\:w-full {
     @media (width >= 64rem) {
       width: 100%;
+    }
+  }
+  .lg\:w-max {
+    @media (width >= 64rem) {
+      width: max-content;
     }
   }
 }
